--- a/set.cabal
+++ b/set.cabal
@@ -32,6 +32,7 @@ test-suite hspec
   build-depends:       base                >= 4.7     &&  < 4.8
                      , hspec               >= 2       && < 2.1
                      , QuickCheck          >= 2       && < 3
+                     , set
 
 test-suite doctest
   default-language: Haskell2010
