--- a/set.cabal
+++ b/set.cabal
@@ -22,6 +22,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Set
   build-depends:       base      >= 4.7 && < 4.8
+                     , array     >  0.5 && < 1
                      , random    >  1   && < 2
 
 test-suite hspec
